--- a/useState/useStateHook/src/App.css
+++ b/useState/useStateHook/src/App.css
@@ -39,4 +39,16 @@
 
 .read-the-docs {
   color: #888;
+} 
+
+.counter-span {
+  margin: 0 10px; 
+  padding: 0 20px;
+  border-radius: 4px;
+  overflow: hidden;
+  
+} 
+
+button {
+  margin: 0 5px;
 }
